Fix live table overflow and undefined values

--- a/src/styles/live/schedule.scss
+++ b/src/styles/live/schedule.scss
@@ -21,6 +21,7 @@
 				color: #fff;
 				// border-bottom: 1px solid #fff3;
 			}
+			.table-scroll { overflow: scroll; }
 			table {
 				width: 100%;
 				color: $textColor;
